[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/dead.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Jump0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Jump4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=11]
[ext_resource path="res://Sprites/theme/fonts/font_roboto.tres" type="DynamicFont" id=12]
[ext_resource path="res://Sprites/Tiles/Sky.png" type="Texture" id=13]
[ext_resource path="res://scenes/SaveSystem.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Dead",
"speed": 24.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 26.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.52549 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision/safe_margin = 0.7
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 3 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 40, 12 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -486.0
margin_top = -284.0
margin_right = -245.0
margin_bottom = -242.0
custom_fonts/normal_font = ExtResource( 12 )
custom_styles/normal = SubResource( 3 )
text = "Score"

[node name="Hint" type="RichTextLabel" parent="."]
margin_left = -501.0
margin_top = -239.0
margin_right = -243.0
margin_bottom = -135.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "
    left/right: Move left/right
    up: Jump
    Space/Left Click: Shoot fireball
    Esc: Pause game
"

[node name="UpdateScore" type="Timer" parent="."]
process_mode = 0
wait_time = 0.01
autostart = true

[node name="Pozadi" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Pozadi"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Pozadi/ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 1200, 700 )

[node name="Sky" type="Sprite" parent="Pozadi/ParallaxBackground/ParallaxLayer"]
position = Vector2( -5.87268, 0 )
scale = Vector2( 1.8827, 1.10023 )
texture = ExtResource( 13 )
centered = false

[node name="SaveSystem" parent="." instance=ExtResource( 14 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="UpdateScore" to="." method="_on_UpdateScore_timeout"]
